<resources>
    <string name="app_name">Zeus - Base</string>
    <string name="there_is_empty_fields_or_check_internet_connection">Alanlardan birini boş girdiniz ilerlemek için lütfen doğru bilgiler girin ve internet bağlantınızı kontrol edin</string>
    <string name="do_you_want_to_end_acceptance_collect_and_enter_password">İşlemi bitirmek istiyorsanız lütfen personel şifrenizi giriniz.</string>
    <string name="barcode_or_quantitiy_empty">Barkod\'u veya adet sayısını boş girdiniz ilerlemeki için lütfen doğru bilgiler girin</string>
    <string name="no_exist_in_waybill">İrsaliyede olmayan bir ürün okundu</string>
    <string name="no_exist_in_order">Siparişte olmayan bir ürün okundu</string>
    <string name="barcode_definition">Barkod Tanımlama</string>
    <string name="wms">Zeus Warehouse Management \nSystem</string>
    <string name="app_language_choose">Dil Seçiniz</string>
    <string name="barcode_waybill">Barkod Tanımlama</string>
    <string name="no_defined_barcode">Tanımlı barkod bulunamadı</string>
    <string name="do_you_want_to_exit_barcode_defination">Barkod tanımlamasından çıkmak istediğinize emin misiniz?</string>
    <string name="there_is_no_product">Böyle bir ürün kodu mevcut ancak bu irsaliyede böyle bir ürün bulunmuyor</string>
    <string name="you_canceled_the_process">İşlemi iptal ettiğinizden adetler güncellenmedi / işlem yapılmadı</string>
    <string name="please_type_product_name_you_want_to_search">Lütfen aramak istediğiniz ürünün adını yazın</string>
    <string name="quantity_exceed">Belirtilen miktarın dışına çıkmak üzerisiniz!\nOnaylıyor musunuz?</string>
    <string name="tried_to_add_more_than_quantity">Adet sayısından daha fazla eklemeye çalıştınız</string>
    <string name="there_is_a_error">Hata ile karşılaşıldı. Yetkili birimle iletişime geçiniz</string>
    <string name="not_done_yet">Henüz yapılmadı!</string>
    <string name="control_dat_content">DAT Kontrol İçerik</string>
    <string name="grand_total_dat">DAT TOPLAM</string>
    <string name="no_permission_to_enter_menu">Bu menüye girme yetkiniz yoktur</string>
    <string name="enter_read_shelf">Raf Kodu Okutunuz</string>
    <string name="enter_barcode">Barkod okutunuz.</string>
    <string name="enter_shelf_">Lütfen raf okutunuz!</string>
    <string name="enter_product_">Lütfen ürün okutunuz!</string>
    <string name="search_shelf_code">Raf kodu arayınız</string>
    <string name="search_product_code">Ürün kodu arayınız</string>
    <string name="new_shelf">Yeni Raf</string>
    <string name="dedicated_shelfs">Atanmış Raflar</string>
    <string name="no_dedicated_shelfs">Atanmış raf bulunmamaktadır. Lütfen Raf ataması gerçekleştiriniz.</string>
    <string name="create_shelf_dedication">Raf ataması oluştur</string>
    <string name="assigned_other_shelf">Başka birine atanmış rafta sayım yapmak istiyor musunuz?</string>
    <string name="fast_counting">HIZLI SAYIM</string>
    <string name="add_product_">ÜRÜN EKLE</string>
    <string name="remove_product">ÜRÜN ÇIKAR</string>
    <string name="check">KONTROL ET</string>
    <string name="complete_counting">SAYIMI TAMAMLA</string>
    <string name="counting_qty">Sayım Miktarı</string>
    <string name="search_counting_wacode">Sayım iş emri kodu arayınız</string>
    <string name="new_enter_read_shelf">Yeni Raf Kodunu Okutunuz</string>
    <string name="product_quantity"> Ürün Miktarı</string>
    <string name="enter_product_quantity"> Ürün adeti giriniz</string>
    <string name="added_item">eklenen eleman</string>
    <string name="product_quantity_info">Ürün Adet Bilgisi</string>
    <string name="replace">Yer Değiştirme</string>
    <string name="product_replenishment">Yeniden İkmal</string>
    <string name="available_replenishment_shelfs">Müsait ikmal rafları bilgisi</string>
    <string name="available_replenishment_shelf_not_found">Müsait ikmal rafı bulunamadı. Lütfen yeni ikmal rafı yaratınız.</string>
    <string name="location_fixing">Adres Sabitleme</string>
    <string name="error_try_again">Hata!\nYeniden deneyin</string>
    <string name="assortment">Çeşit Gözü Yapma</string>
    <string name="product_code_variety_shelf">ÜRÜN KODU (ÇEŞİT GÖZÜ)</string>
    <string name="update_variety_shelf">Çeşit Gözü Güncelle !!</string>
    <string name="move_to_variety_shelf">ÇEŞİT GÖZÜNE AKTAR</string>
    <string name="variety_shelf_not_found">Çeşit gözü bilgisi bulunmamaktadır, Supervisor a danışın.</string>
    <string name="not_variety_shelf">Okutulan adres çeşit gözü adresi değildir.</string>
    <string name="quantity_add_message"> adet ürün eklemek üzerisiniz. Kabul ediyor musunuz?</string>
    <string name="check_username_password">Lütfen, kullanıcı adı / şifrenizi kontrol ediniz</string>
    <string name="there_is_empty_fields">Sayfada boş alanlar mevcut doldurup tekrar deneyin</string>
    <string name="empty_label"> </string>
    <string name="check_internet_connection">Lütfen, internet bağlantınızı kontrol ediniz</string>
    <string name="waybill_not_finished">Geçerli irsaliyede tamamlanmamış ürünler var</string>
    <string name="do_you_want_to_exit">Çıkış yapmak istediğinize emin misiniz?</string>
    <string name="are_you_sure">Emin misiniz?</string>
    <string name="are_you_sure_to_delete">Silmek istediğinize emin misiniz?</string>
    <string name="verify_delete">Silme Onay</string>
    <string name="product_shelf">Seçili Ürün-Raf eşleşmesi (çeşit gözü) silinecek. Onaylıyor musunuz?</string>
    <string name="do_you_want_to">yapmak istediğinize emin misiniz?</string>
    <string name="max_quantity_reached">En fazla bu kadar ürün yerleştirebilirsiniz</string>
    <string name="wrong_quantity_format">Adet değerini yanlış girdiniz</string>
    <string name="enter_quantity">Miktar giriniz</string>
    <string name="quantity_breach">En fazla yerleştirebiliceğin adet %1$s!\nDaha fazlasını yerleştiremezsin!</string>
    <string name="products_left">Tamamlanmamış ürünler var</string>
    <string name="placement_completed">Bu ürünün yerleştirilmesi tamamlanmış</string>
    <string name="controlled_notcompleted">Bu ürünün kontrolü yapılmamış</string>
    <string name="picking_completed">Bu ürün toplanmış. Sıradakine geçiniz.</string>
    <string name="address_immobilization">Adres\nSabitleme</string>
    <string name="placement_done">Yerleştirme tamamlandı</string>
    <string name="placement_not_done">Rafa yerleştirme yapılmadı</string>
    <string name="only_what_can_be_replenished">Sadece ikmal yapılabilecekler</string>
    <string name="create_work_activity_for_replenishment">Gerekli olanlar için ikmal iş emri oluştur.</string>
    <string name="all">Hepsi</string>
    <string name="full">Dolu</string>
    <string name="inmonitoring">İzlemede</string>
    <string name="on_loading">Yükleme</string>
    <string name="emergency_loading">Acil Yükleme</string>
    <string name="max_qty_zero">Max Adet Sıfır</string>
    <string name="creation_date">Oluşturulma Tarihi:\t</string>
    <string name="finished_process">İşlem tamamlandı</string>
    <string name="please_wait">Lütfen bekleyiniz...</string>
    <string name="downloading">İndiriliyor...</string>
    <string name="start_date">Başlangıç Tarihi:\t</string>
    <string name="barcode_number">Barkod Numarası</string>
    <string name="add_barcode">Barkod Ekleme</string>
    <string name="search_waybill">İrsaliye Arama</string>
    <string name="quantity_title">Adet Bildirimi</string>
    <string name="finish_process">İşlemi Bitir</string>
    <string name="finish">Bitir</string>
    <string name="barcode_empty">Barkod Boş</string>
    <string name="document_date">Belge Tarihi:</string>
    <string name="quick_control">Seri Kontrol</string>
    <string name="quantity_check">Adet Kontrol</string>
    <string name="barcode_without_dots">Barkod</string>
    <string name="wrong_password">Yanlış Şifre</string>
    <string name="process_type">İşlem Tipi:\t</string>
    <string name="client_name">Müşteri Adı:\t</string>
    <string name="make_search">Arama Yapınız</string>
    <string name="name_surname">İsim Soyisim</string>
    <string name="end_date">Bitiş Tarihi:\t</string>
    <string name="welcome">Hoşgeldiniz</string>
    <string name="login_welcome">Hoş geldiniz</string>
    <string name="login_user_">Giriş Yap</string>
    <string name="sign_up">Oturum Aç</string>
    <string name="came">geldi</string>
    <string name="loading">Yükleniyor</string>
    <string name="plaese_wait">Lütfen Bekleyiniz...</string>
    <string name="control_group">Kontrol Grup</string>
    <string name="production">Üretim</string>
    <string name="inquiry">Sorgulama</string>
    <string name="cancel">İptal</string>
    <string name="cancel_big">İPTAL</string>
    <string name="next">İLERİ</string>
    <string name="back">GERİ</string>
    <string name="confirm">Onay</string>
    <string name="barcode">Barkod:</string>
    <string name="quantity">Adet:</string>
    <string name="waybill_quantity">ADET</string>
    <string name="no_supply_address_for_placement">Ürünün toplanılabileceği\n bir tedarik adresi yok</string>
    <string name="product_supply_addresses">Ürün Tedarik Adresleri</string>
    <string name="search_supplier_name">Tedarikçi ismi arayınız</string>
    <string name="order_note_name">Not ismi arayınız</string>
    <string name="address">Adres</string>
    <string name="quantity1">Adet</string>
    <string name="product_quantity_subtitle">ÜRÜN-ADET</string>
    <string name="waybill_quota">KONT.</string>
    <string name="waybill_placement">YERLEŞ.</string>
    <string name="inbound">Mal Kabul</string>
    <string name="returning">İade</string>
    <string name="warning">Uyarı</string>
    <string name="i_leave_half">Yarım Bırakıyorum</string>
    <string name="picking_not_completed">Kalemlerin toplanması bitmedi. Bu kalemler için Cross Dock emri oluşturulmasını istiyor musunuz?</string>
    <string name="reset">Sıfırla</string>
    <string name="product">Ürün:</string>
    <string name="product_2">Ürün</string>
    <string name="login">Giriş</string>
    <string name="send">Gönder</string>
    <string name="error">Hata</string>
    <string name="close">Kapat</string>
    <string name="close_screen">Sayfanı Kapat</string>
    <string name="choose_package">Lütfen paket seçiniz</string>
    <string name="permission_denied">Giriş izni yok</string>
    <string name="attention">Dikkat</string>
    <string name="sure_to_delete">Silmek istediğinize emin misiniz?</string>
    <string name="deletion_cancelled">Silme işlemi iptal edildi!</string>
    <string name="attention_notification">DİKKAT</string>
    <string name="picking_notification">TOPLAMA - İŞ EMRİ</string>
    <string name="placement_notification">YERLEŞTİRME - İŞ EMRİ</string>
    <string name="movement">Hareket</string>
    <string name="menu_replenishmentShelf_product_quantity">İkmal rafı ürün adet bilgisi</string>
    <string name="menu_finish_workActivity">İş Emrini bitir</string>
    <string name="packageNo">Paket Numarası</string>
    <string name="control_point">Kulvar - </string>
    <string name="qty">Miktar </string>
    <string name="need_qty">İhtiyaç Mk</string>
    <string name="transferable_qty">Trns. Edilebil. Mk.</string>
    <string name="transfer_qty">Aktarım Adet</string>
    <string name="crossdock_request">CrossDock İsteği</string>
    <string name="shelf_placement">Rafa Yerleştir</string>
    <string name="control_point_placement">Kulvara Yerleştir</string>
    <string name="product_name">Ürün Adı</string>
    <string name="product_code">Ürün Kodu</string>
    <string name="work_activity_detail">İş Emri Detayı</string>
    <string name="route_list">Rota seçiniz</string>
    <string name="vehicle_down">Araca yükleme</string>
    <string name="vehicle_up">Araçtan indirme</string>
    <string name="vehicle_up_btn">Araçtan indir</string>
    <string name="installed_package">Yüklenen paketler</string>
    <string name="delivered_person">Teslim edilen adı</string>
</resources>