<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <eryaz.software.zeusBase.util.widgets.StateView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:sv_ignore_referenced_ids="toolbar">

        <eryaz.software.zeusBase.util.widgets.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/back_icon"
            app:subTitle="@string/route_list"
            app:title="@string/movement"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/downBtn"
                style="@style/Widget.NewZeusDemo.Button.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                app:cornerRadius="8dp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                android:text="@string/vehicle_down"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upBtn"
                style="@style/Widget.NewZeusDemo.Button.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                app:cornerRadius="8dp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                android:text="@string/vehicle_up"
                app:layout_constraintTop_toBottomOf="@id/downBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </eryaz.software.zeusBase.util.widgets.StateView>
</layout>