<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="eryaz.software.zeusBase.ui.dashboard.movement.routeList.chooseStep.vehicleUp.VehicleUpVM" />
    </data>

    <eryaz.software.zeusBase.util.widgets.StateView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:onRetryClick="@{() -> viewModel.getOrderHeaderRouteList()}"
        app:sv_ignore_referenced_ids="toolbar">

        <eryaz.software.zeusBase.util.widgets.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/back_icon"
            app:subTitle="@string/vehicle_up"
            app:title="@string/movement" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bgColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <eryaz.software.zeusBase.util.widgets.TextInputLayout
                android:id="@+id/searchPackageBarcode"
                style="@style/Widget.Zeus.SearchInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:elevation="10dp"
                android:hint="@string/packageNo"
                app:endIconTint="@null"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchEdt"
                    style="@style/Widget.Zeus.SearchInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:text="@={viewModel.packageCode}"
                    android:textColorHint="@color/logoGray"
                    android:textSize="18sp"
                    app:fontFamily="@font/sogeoui"/>
            </eryaz.software.zeusBase.util.widgets.TextInputLayout>

            <eryaz.software.zeusBase.util.widgets.TextInputLayout
                android:id="@+id/deliveredPersonLyt"
                style="@style/Widget.Zeus.SearchInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:elevation="10dp"
                android:hint="@string/delivered_person"
                app:endIconTint="@null"
                app:layout_constraintTop_toBottomOf="@+id/searchPackageBarcode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deliveredPersonEdt"
                    style="@style/Widget.Zeus.SearchInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:text="@={viewModel.deliveredNameTxt}"
                    android:textColorHint="@color/logoGray"
                    android:textSize="18sp"
                    app:fontFamily="@font/sogeoui" />
            </eryaz.software.zeusBase.util.widgets.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/vehicleDownBtn"
                style="@style/Widget.NewZeusDemo.Button_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/vehicle_up_btn"
                android:textSize="20sp"
                app:fontFamily="@font/sogeoui"
                app:layout_constraintTop_toBottomOf="@+id/deliveredPersonLyt"
                app:onSingleClick="@{()-> viewModel.createOrderHeaderRoute()}" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/sogeoui"
                android:text="@string/installed_package"
                android:textColor="@color/colorPrimaryBoldBlue"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/vehicleDownBtn" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_weight="2"
                app:itemDecoration="@{12}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:itemCount="3"
                tools:listitem="@layout/item_on_vehicle_package" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/layout_loading" />

        <include layout="@layout/layout_error" />

    </eryaz.software.zeusBase.util.widgets.StateView>
</layout>